update: 补充笔记5.1,5.2节

--- a/eBook/05.1.md
+++ b/eBook/05.1.md
@@ -201,14 +201,18 @@ if value := process(data); value > max {
 	...
 }
 ```
+VIOLIN补充:
 
-补充 by VIOLIN:
-
-在实际情况中经常遇到这种结构：
+在实际应用中经常遇到这种结构：
 
 ``` go
-if value, err := process(data);err == nil{
-    ...
+if value, err := process(data); err != nil{
+	// do something for the error
+	// '!= nil'可以省略, 为了程序的易读性, 最好不省。
+}
+// or
+if value, ok := process(data); ok {
+	// do something for the value
 }
 ```
 
