--- a/eBook/05.2.md
+++ b/eBook/05.2.md
@@ -87,7 +87,7 @@ if err != nil {
 	return err
 }
 doSomething(f) // 当没有错误发生时，文件对象被传入到某个函数中
-doSomething
+doSomethingElse
 ```
 
 **练习 5.1** 尝试改写 [string_conversion2.go](examples/chapter_5/string_conversion2.go) 中的代码，要求使用 `:=` 方法来对 `err` 进行赋值，哪些地方可以被修改？
